src/components/graphs/region-bar-graph/region-bar-graph.scss
.graph-container {
  height: 850px;
  width: var(--width);
}

.graph {
  height: 900px;
  width: 1600px;
  overflow-x: auto;
  overflow-y: hidden;
}
::-webkit-scrollbar {
  width: 0px;
  height: 10px;
}
::-webkit-scrollbar-track {
  background: #e9e5e58d;
  border-radius: 10px;
}
::-webkit-scrollbar-thumb:horizontal {
  border-radius: 10px;
  background: #ccc;
}

